# ChangeLog for dev-java/gnu-regexp
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/gnu-regexp/ChangeLog,v 1.21 2007/02/18 20:15:23 betelgeuse Exp $

  18 Feb 2007; Petteri Räty <betelgeuse@gentoo.org>
  -gnu-regexp-1.1.4.ebuild, -gnu-regexp-1.1.4-r1.ebuild:
  Cleanup.

  07 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  gnu-regexp-1.1.4-r2.ebuild:
  Add ~x86-fbsd keyword.

  23 Nov 2006; <blubb@gentoo.org> gnu-regexp-1.1.4-r2.ebuild:
  stable on amd64

  23 Nov 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gnu-regexp-1.1.4-r2.ebuild:
  ppc stable, bug #155182

  15 Nov 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  gnu-regexp-1.1.4-r2.ebuild:
  Stable on x86, see bug #155182.

  15 Nov 2006; Joshua Nichols <nichoj@gentoo.org>
  gnu-regexp-1.1.4-r2.ebuild:
  Added ~ppc64 keyword.

  04 Nov 2006; <blubb@gentoo.org> gnu-regexp-1.1.4-r1.ebuild:
  stable on amd64

*gnu-regexp-1.1.4-r2 (29 Sep 2006)

  29 Sep 2006; Vlastimil Babka <caster@gentoo.org>
  +gnu-regexp-1.1.4-r2.ebuild:
  Revision bump to use gen-2 java system. Added doc and source USE flags.

  03 Sep 2005; Michael Hanselmann <hansmi@gentoo.org>
  gnu-regexp-1.1.4-r1.ebuild:
  Stable on ppc.

  12 Jul 2005; Thomas Matthijs <axxo@gentoo.org> gnu-regexp-1.1.4.ebuild,
  gnu-regexp-1.1.4-r1.ebuild:
  Style fixes

*gnu-regexp-1.1.4-r1 (18 May 2005)

  18 May 2005; Thomas Matthijs <axxo@gentoo.org> files/1.1.4/Makefile.diff,
  gnu-regexp-1.1.4.ebuild, +gnu-regexp-1.1.4-r1.ebuild:
  fixes 93032, versioned jar, thanks too Josh Nichols <nichoj@alum.rpi.edu>

  01 May 2005; Jan Brinkmann <luckyduck@gentoo.org> gnu-regexp-1.1.4.ebuild:
  stabe on ppc

  13 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> gnu-regexp-1.1.4.ebuild:
  stable on amd64

  20 Oct 2004; Dylan Carlson <absinthe@gentoo.org> gnu-regexp-1.1.4.ebuild:
  Keywords ~amd64.

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org> gnu-regexp-1.1.4.ebuild: