@@ -1,4 +1,4 @@
 DIST gnu.regexp-1.1.4.tar.gz 164741 RMD160 0a3e9f0ee24a87bbb18f51eba0fd2e9e995f5125 SHA1 66c0ecf5f47b1cb166b740540f16933f130371b4 SHA256 493d9cbcb2cc08580be255f21543f3fe638a1eb93f605180583c91e1c5622080
-EBUILD gnu-regexp-1.1.4-r2.ebuild 1030 RMD160 b6da74bd0db9fdae266bbd5b3eabecff3d728020 SHA1 6497df1b6056df49f302e52e9b7b128d39227f1c SHA256 b52a0f2e174d0503d5358b5eb23fb111f548656a0492894087454c6ca8e9f6b4
-MISC ChangeLog 2503 RMD160 b6ada3447a0313e1430b898258c07c7cb7e2c06d SHA1 7b08ae98e3a7540f85790bbf1129de36711756df SHA256 bbf5388bd769ae6e9a261137ee81432366e2cc645b8491aa3392f11a5eebdd0a
+EBUILD gnu-regexp-1.1.4-r2.ebuild 1044 RMD160 2c989893ed3269a79a7e69f35dff36d800293115 SHA1 f9cea930a961bb9bca64e59d5979bb9f62f02855 SHA256 c23ee4d6e4d5259204c0d576822c372726e079b5ee9b98a131ef49147201ea54
+MISC ChangeLog 2734 RMD160 77223f8c562d4be8402e342118cd46deb70c202c SHA1 2404e185cf917037b3631353a963144ec4012394 SHA256 80f97f7d4ba2db64aa509ec56262f30ca3c3f38c6a67871f0a25e61b2c6aaabb
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
